Treat unimplemented onGetActionsRequested event handling as success.

Some filesystem providers don't seem to implement this, so reporting
errors whenever one is encountered is not useful. Return an empty result
in those cases instead of an error.

Remove the dummy implementation in zip archiver to simplify code and
avoid polluting metrics. Bump its version number to force Chrome to
launch its background page and notice the absent event handler.

Bug: 679634
Change-Id: I7153bb419e0f2888e8675b292142a581b0e17cf0
Reviewed-on: https://chromium-review.googlesource.com/c/1381353
Reviewed-by: Anand Mistry <amistry@chromium.org>
Reviewed-by: Naoki Fukino <fukino@chromium.org>
Commit-Queue: Sam McNally <sammc@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619135}
Former-commit-id: 46acbaaac08d30f8c32ec217ef29c1b4a721eb66